feat: Test and implement ActiveCharactersProvider